@@ -1,18 +1,1 @@
-Makefile
-blib/
-pm_to_blib
-inc/
-embedded/
-cover_db/
-smoke.html
-smoke.yaml
-smoketee.txt
-sqlnet.log
-BUILD.SKIP
-COVER.SKIP
-CPAN.SKIP
-META.yml
-.DS_Store
-Debian_CPANTS.txt
-*.swp
-prove.html
+App-Benchmark-Accessors-*
