@@ -1,38 +1,0 @@
-Changes
-inc/Module/AutoInstall.pm
-inc/Module/Install.pm
-inc/Module/Install/AuthorRequires.pm
-inc/Module/Install/AutoInstall.pm
-inc/Module/Install/Base.pm
-inc/Module/Install/Can.pm
-inc/Module/Install/ExtraTests.pm
-inc/Module/Install/Fetch.pm
-inc/Module/Install/Homepage.pm
-inc/Module/Install/Include.pm
-inc/Module/Install/Makefile.pm
-inc/Module/Install/Metadata.pm
-inc/Module/Install/Repository.pm
-inc/Module/Install/Win32.pm
-inc/Module/Install/WriteAll.pm
-inc/Test/More.pm
-lib/App/Benchmark/Accessors.pm
-Makefile.PL
-MANIFEST			This list of files
-META.yml
-README
-README.mkdn
-t/construction.t
-t/get.t
-t/set.t
-t/versions.t
-util/upgrade_dependencies.pl
-xt/author/00_compile.t
-xt/author/01_perl_critic.t
-xt/author/02_pod.t
-xt/author/03_podspell.t
-xt/author/04_pod_coverage.t
-xt/author/05_kwalitee.t
-xt/author/06_yaml_meta.t
-xt/author/07_portability_files.t
-xt/author/08_synopsis.t
-xt/author/perlcriticrc
