@@ -1,41 +1,0 @@
-# Version control files and dirs.
-\bRCS\b
-\bCVS\b
-\.svn
-\.git
-,v$
-
-# Makemaker/Build.PL generated files and dirs.
-^MANIFEST\.
-^Makefile$
-^Build$
-^blib/
-^pm_to_blib/
-^_build/
-^MakeMaker-\d
-embedded/
-cover_db/
-smoke.html
-smoke.yaml
-smoketee.txt
-sqlnet.log
-BUILD.SKIP
-COVER.SKIP
-CPAN.SKIP
-t/000_standard__*
-Debian_CPANTS.txt
-
-# Temp, old, emacs, vim, backup files.
-~$
-\.old$
-\.swp$
-\.tar$
-\.tar\.gz$
-^#.*#$
-^\.#
-.shipit
-
-# Local files, not to be included
-^scratch/
-^core$
-^var/
