@@ -1,27 +1,0 @@
-This is the Perl distribution App-Benchmark-Accessors.
-
-## Installation
-
-App-Benchmark-Accessors installation is straightforward. If your CPAN shell is
-set up, you should just be able to do
-
-    % cpan App::Benchmark::Accessors
-
-Download it, unpack it, then build it as per the usual:
-
-    % perl Makefile.PL
-    % make && make test
-
-Then install it:
-
-    % make install
-
-## Documentation
-
-App-Benchmark-Accessors documentation is available as in POD. So you can do:
-
-    % perldoc App::Benchmark::Accessors
-
-to read the documentation online with your favorite pager.
-
-Marcel Gruenauer
