@@ -1,0 +1,7 @@
+name    = App-Benchmark-Accessors
+author  = Marcel Gruenauer <marcel@cpan.org>
+license = Perl_5
+copyright_holder = Marcel Gruenauer
+copyright_year = 2008
+
+[@MARCEL]
