@@ -1,21 +1,21 @@
-package App::Benchmark::Accessors;
 use 5.006;
 use strict;
 use warnings;
-our $VERSION = '0.07';
+
+package App::Benchmark::Accessors;
+# ABSTRACT: Benchmark accessor generators
+
 #<<<
 package    # hide from PAUSE
   WithMoose;
 use Moose;
 has myattr => ( is => 'rw' );
 
-
 package    # hide from PAUSE
   WithMooseImmutable;
 use Moose;
 has myattr => ( is => 'rw' );
 __PACKAGE__->meta->make_immutable;
-
 
 package    # hide from PAUSE
   WithMouse;
@@ -33,24 +33,20 @@ package    # hide from PAUSE
 use base qw(Class::Accessor);
 __PACKAGE__->mk_accessors(qw/myattr/);
 
-
 package    # hide from PAUSE
   WithClassAccessorFast;
 use base qw(Class::Accessor::Fast);
 __PACKAGE__->mk_accessors(qw/myattr/);
-
 
 package    # hide from PAUSE
   WithClassAccessorFastXS;
 use base qw(Class::Accessor::Fast::XS);
 __PACKAGE__->mk_accessors(qw/myattr/);
 
-
 package    # hide from PAUSE
   WithClassAccessorComplex;
 use base qw(Class::Accessor::Complex);
 __PACKAGE__->mk_new->mk_scalar_accessors(qw/myattr/);
-
 
 package    # hide from PAUSE
   WithClassAccessorConstructor;
@@ -69,7 +65,6 @@ package    # hide from PAUSE
 use base qw(Mojo::Base);
 __PACKAGE__->attr('myattr');
 
-
 package    # hide from PAUSE
   WithClassMethodMaker;
 use Class::MethodMaker
@@ -77,29 +72,24 @@ use Class::MethodMaker
       new    => [ qw/-hash new/ ],
     ];
 
-
 package    # hide from PAUSE
   WithObjectTiny;
 use Object::Tiny qw/myattr/;
-
 
 package    # hide from PAUSE
   WithSpiffy;
 use Spiffy -base;
 field 'myattr';
 
-
 package    # hide from PAUSE
   WithClassSpiffy;
 use Class::Spiffy -base;
 field 'myattr';
 
-
 package    # hide from PAUSE
   WithAccessors;
 use accessors qw(myattr);
 sub new { bless {}, shift }
-
 
 package    # hide from PAUSE
   WithClassXSAccessor;
@@ -108,7 +98,6 @@ sub new {
     my $class = shift;
     bless { @_ } => $class;
 }
-
 
 package    # hide from PAUSE
   WithClassXSAccessorArray;
@@ -119,25 +108,21 @@ sub new {
     bless [ $args{myattr} ] => $class;
 }
 
-
 package    # hide from PAUSE
   WithObjectTinyXS;
 use Object::Tiny qw/myattr/;
 use Class::XSAccessor accessors => { myattr => 'myattr' }, replace => 1;
-
 
 package    # hide from PAUSE
   WithRose;
 use base qw(Rose::Object);
 use Rose::Object::MakeMethods::Generic(scalar => 'myattr');
 
-
 #package    # hide from PAUSE
 #  WithBadgerClass;
 #use Badger::Class
 #    base     => 'Badger::Base',
 #    mutators => 'myattr';
-
 
 package    # hide from PAUSE
   WithRubyishAttribute;
@@ -147,15 +132,6 @@ sub new { bless {}, shift }
 attr_accessor "myattr";
 #>>>
 1;
-__END__
-
-=head1 NAME
-
-App::Benchmark::Accessors - Benchmark accessor generators
-
-=head1 SYNOPSIS
-
-# None - just run the test suite
 
 =head1 DESCRIPTION
 
@@ -201,8 +177,6 @@ This way you can look at this distribution's CPAN testers page to see the
 benchmark results on many different platforms and for many different perl
 versions.
 
-The C<t/versions.t> reports the version numbers of these modules.
-
 The C<t/construction.t> file benchmarks object creation, C<t/get.t> benchmarks
 getter methods and C<t/set.t> benchmarks setter methods.
 
@@ -217,34 +191,4 @@ could be seen as micro-optimization. However, if you have a complex object
 hierarchy and create lots of objects and run many many getters/setters on
 them, they could help to save some time. But be sure to use L<Devel::NYTProf>
 first to see where your real bottlenecks are.
-
-=head1 BUGS AND LIMITATIONS
-
-No bugs have been reported.
-
-Please report any bugs or feature requests through the web interface at
-L<http://rt.cpan.org>.
-
-=head1 INSTALLATION
-
-See perlmodinstall for information and options on installing Perl modules.
-
-=head1 AVAILABILITY
-
-The latest version of this module is available from the Comprehensive Perl
-Archive Network (CPAN). Visit <http://www.perl.com/CPAN/> to find a CPAN
-site near you. Or see L<http://search.cpan.org/dist/App-Benchmark-Accessors/>.
-
-=head1 AUTHORS
-
-Marcel GrE<uuml>nauer, C<< <marcel@cpan.org> >>
-
-=head1 COPYRIGHT AND LICENSE
-
-Copyright 2008-2009 by Marcel GrE<uuml>nauer
-
-This library is free software; you can redistribute it and/or modify
-it under the same terms as Perl itself.
-
-=cut
 
