@@ -1,5 +1,0 @@
-#!perl -w
-use strict;
-use warnings;
-use Test::Compile;
-all_pm_files_ok();
