@@ -1,5 +1,0 @@
-#!perl -w
-use strict;
-use warnings;
-use Test::Pod;
-all_pod_files_ok();
