@@ -1,5 +1,0 @@
-#!perl
-use strict;
-use warnings;
-use Test::YAML::Meta;
-meta_yaml_ok();
