@@ -1,5 +1,0 @@
-#!perl -T
-use strict;
-use warnings;
-use Test::Portability::Files;
-run_tests();
