@@ -1,5 +1,0 @@
-#!perl
-use warnings;
-use strict;
-use Test::Synopsis;
-all_synopsis_ok('lib');
